= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/rscrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.5.1\...v0.5.2[0.5.2] - 2023-07-12

=== Changed

* Change license of documents to CC BY 4.0 ({pull-request-url}/158[#158])

== {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-06-12

=== Changed

* Update dependencies

== {compare-url}/v0.4.2\...v0.5.0[0.5.0] - 2023-05-16

=== Changed

* Update dependencies
* Bump MSRV to 1.65.0

== {compare-url}/v0.4.1\...v0.4.2[0.4.2] - 2023-04-02

=== Fixed

* Fix the exit code when EOF signature is mismatched

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2023-01-30

=== Fixed

* Fix missing the `lang` attribute in the book

== {compare-url}/v0.3.0\...v0.4.0[0.4.0] - 2023-01-28

=== Changed

* Bump sysexits to v0.4
* Bump MSRV to 1.64.0

== {compare-url}/v0.2.0\...v0.3.0[0.3.0] - 2022-12-18

=== Added

* Add MessagePack to output format

=== Changed

* Change the minimum value of `--max-memory` to 1 MiB
* Change value of `--max-time` to be human-friendly

=== Fixed

* Fix create a package for Windows in CD

== {compare-url}/v0.1.1\...v0.2.0[0.2.0] - 2022-12-10

=== Added

* Add options related to resources
* Add option to output the encryption parameters as data exchange formats

=== Changed

* Change to allow empty password

=== Fixed

* Fix to remove trailing newline from password

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2022-11-24

=== Changed

* Move common code into functions

=== Fixed

* Change to not read both passphrase and input data from stdin at the same time

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-11-18

=== Added

* Initial release