@@ -33,6 +33,7 @@ byte-unit = "4.0.19"
 ciborium = { version = "0.2.1", optional = true }
 clap = { version = "4.3.11", features = ["derive", "wrap_help"] }
 clap_complete = "4.3.2"
+clap_complete_nushell = "4.3.1"
 dialoguer = { version = "0.10.4", default-features = false, features = ["password"] }
 fraction = { version = "0.13.1", default-features = false }
 humantime = "2.1.0"
