@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.5.2\...HEAD[Unreleased]
+
+=== Added
+
+* Add feature to generate Nushell completions ({pull-request-url}/161[#161])
+
 == {compare-url}/v0.5.1\...v0.5.2[0.5.2] - 2023-07-12
 
 === Changed
